Update branding and apply QM-Guru palette

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='75' font-size='75'>🆘</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NC-Rescue | ISO 9001 Abweichungen professionell bearbeiten</title>
+    <title>ISO 9001 Abweichungen: Einschätzung vom Profi | ISO 9001 Abweichungen professionell bearbeiten</title>
     <meta name="description" content="Fachliche Unterstützung bei ISO 9001 Neben- und Hauptabweichungen. Über 30 Jahre Erfahrung, über 1.000 Audits." />
     <meta name="keywords" content="ISO 9001, Abweichungen, Nebenabweichung, Hauptabweichung, QM, Qualitätsmanagement, Audit" />
   </head>
